--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,15 @@ body {
 .working-image {
   box-shadow: 30px -30px papayawhip;
 }
+
+.disc{
+  width: 60vw;
+  height: 70vh;
+  background-color: #f0f0f0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius:75% 25% 75% 25% / 45% 55% 45% 55% 
+}
