--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,81 @@ body {
   justify-content: center;
   border-radius: 75% 25% 75% 25% / 45% 55% 45% 55%;
 }
+/* animation */
+/* fadein */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.fade-in {
+  animation: fadeIn 0.6s ease-out forwards;
+}
+/* fadeout */
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
 
+.fade-out {
+  animation: fadeOut 0.6s ease-out forwards;
+}
+
+/* slide in */
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+.slide-in-left {
+  animation: slideInLeft 0.8s ease-out forwards;
+}
+
+@keyframes slideInRight {
+  from {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.slide-in-right {
+  animation: slideInRight 0.8s ease-out forwards;
+}
+
+/* zoom in */
+
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.zoom-in {
+  animation: zoomIn 0.6s ease-out forwards;
+}
+
+/*  */
 
 @keyframes slideArrow {
   0% {
@@ -60,8 +134,6 @@ body {
 .element:hover {
   animation: slideArrow 1 0.3s ease-in-out forwards;
 }
-
-
 
 @media screen and (max-width: 768px) {
   .working-image {
